Suggest recompilation with openssl or gnutls if the https protocol is not found.

Fixes ticket #2765.
(cherry picked from commit 1db88c33f2c0225aae160cc412b62dfaa3a34cbc)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>